adding rectangle card and adding javascript

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="flex flex-col md:flex-row ">
             <!-- shape card container -->
             <div class="flex-1 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
-                <!-- Triangle card -->
+                <!-- Triangle Card Start -->
                 <div class="card w-96 bg-base-100 shadow-xl">
                     <figure><img src="images/triangle.png" alt="Shoes" /></figure>
                     <div class="card-body">
@@ -40,8 +40,53 @@
 
                     </div>
                   </div>
+                  <!-- Triangle Card End -->
+
+                  <!-- Rectangle Card Start -->
+                  <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure><img src="images/rectangle.png" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Rectangle</h2>
+                      <p class="text-center text-3xl">Area = W x I</p>
+
+                      <div>
+                        <input class="w-24 text-2xl p-2 rounded-sm" type="text" name="" id="rectangle-weight" placeholder="W"> <span class="mr-4 ml-2">Cm</span>
+                        <input  class="w-24 text-2xl p-2 rounded-sm" type="text" name="" id="rectangle-height" placeholder="h">
+                        <span>Cm</span>
+                      </div>
+
+                      <div>
+                        <p class="text-2xl">Area: <span id="rectangle-area"></span> <span>Cm<sup>2</sup></span></p>
+                      </div>
+
+                      <div class="card-actions justify-end">
+                        <button onclick="calculateRectangleArea()" class="btn btn-primary w-full">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+                  <!-- Rectangle Card End -->
                   
-                 
+                  <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Shoes!</h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <button class="btn btn-primary">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="card w-96 bg-base-100 shadow-xl">
+                    <figure><img src="https://daisyui.com/images/stock/photo-1606107557195-0e29a4b5b4aa.jpg" alt="Shoes" /></figure>
+                    <div class="card-body">
+                      <h2 class="card-title">Shoes!</h2>
+                      <p>If a dog chews shoes whose shoes does he choose?</p>
+                      <div class="card-actions justify-end">
+                        <button class="btn btn-primary">Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
             </div>
             <!-- Area calculation container -->
             <div class="w-96 border-2 border-gray-700 rounded-md">
@@ -51,6 +96,6 @@
     </main>
 
     <script src="triangle-calculate.js"></script>
-   
+    <script src="rectangle-calculate.js"></script>
 </body>
 </html>
